tests/NormalTests/paczka1/small_fuzzy/64371026.err
Error in line 2: ObywGvD2tzP S986 47,8
Error in line 9: ObywGvD2tzP S456 39,4
